--- a/zaszlo.html
+++ b/zaszlo.html
@@ -32,11 +32,11 @@
                     <script>
                         const myCanvas = document.getElementById("myCanvas");
                         const ctx = myCanvas.getContext("2d");
-                        ctx.fillStyle = "red";
+                        ctx.fillStyle = "#ce1126";
                         ctx.fillRect(20, 20, 250, 40);
-                        ctx.fillStyle = "GhostWhite";
+                        ctx.fillStyle = "#ffffff";
                         ctx.fillRect(20, 60, 250, 40);
-                        ctx.fillStyle = "LimeGreen";
+                        ctx.fillStyle = "#006847";
                         ctx.fillRect(20, 100, 250, 40);
                     </script>
                 </p>
