--- a/zaszlo.html
+++ b/zaszlo.html
@@ -27,17 +27,17 @@
                     <h3>Zászló</h3>
                 </header>
                 <p>
-                    <canvas id="myCanvas" width="300" height="160"></canvas>
+                    <canvas id="Zászló" width="800" height="420"></canvas>
 
                     <script>
-                        const myCanvas = document.getElementById("myCanvas");
+                        const myCanvas = document.getElementById("Zászló");
                         const ctx = myCanvas.getContext("2d");
                         ctx.fillStyle = "red";
-                        ctx.fillRect(20, 20, 250, 40);
+                        ctx.fillRect(20, 0, 800, 140);
                         ctx.fillStyle = "white";
-                        ctx.fillRect(20, 60, 250, 40);
+                        ctx.fillRect(20, 140, 800, 140);
                         ctx.fillStyle = "green";
-                        ctx.fillRect(20, 100, 250, 40);
+                        ctx.fillRect(20, 280, 800, 140);
                     </script>
                 </p>
                 <p>
