--- a/orarend.html
+++ b/orarend.html
@@ -4,23 +4,22 @@
         <title>
             Kollázs
         </title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="navbar.css" />
         <meta charset="utf-8" />
     </head>
     <body>
+        <ul>
+            <li><a href="index.html">Főoldal</a></li>
+            <li><a href="kollazs.html">Kollázs</a></li>
+            <li><a href="zaszlo.html">Zászló</a></li>
+            <li><a href="recept.html">Recept</a></li>
+            <li><a class="active" href="orarend.html">Órarend</a></li>
+        </ul>
         <header id="fejlec">
             <h1 id="szlogen">
                 Órarend
             </h1> 
         </header>
-        <section id="tartalom">
-            <nav id="menusav">
-                <a href="index.html">Főoldal</a>
-                <a href="kollazs.html">Kollázs</a>
-                <a href="zaszlo.html">Zászló</a>
-                <a href="recept.html">Recept</a>
-                <a href="orarend.html">Órarend</a>
-            </nav>
             <article id="lenyeg">
                 <header>
                     <h2>Papp Dániel Dominik</h2>
