--- a/recept.html
+++ b/recept.html
@@ -4,23 +4,22 @@
         <title>
             Kollázs
         </title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="navbar.css" />
         <meta charset="utf-8" />
     </head>
     <body>
+        <ul>
+            <li><a href="index.html">Főoldal</a></li>
+            <li><a href="kollazs.html">Kollázs</a></li>
+            <li><a href="zaszlo.html">Zászló</a></li>
+            <li><a class="active" href="recept.html">Recept</a></li>
+            <li><a href="orarend.html">Órarend</a></li>
+        </ul>
         <header id="fejlec">
             <h1 id="szlogen">
-                A sportszelet és tiramisu receptje
+                A sportszelet receptje
             </h1> 
         </header>
-        <section id="tartalom">
-            <nav id="menusav">
-                <a href="index.html">Főoldal</a>
-                <a href="kollazs.html">Kollázs</a>
-                <a href="zaszlo.html">Zászló</a>
-                <a href="recept.html">Recept</a>
-                <a href="orarend.html">Órarend</a>
-            </nav>
             <article id="lenyeg">
                 <header>
                     <h2>Papp Dániel Dominik</h2>
@@ -30,14 +29,7 @@
                     <li>A margarint kockákra vágjuk, vastag aljú fazékba tesszük. Hozzáadjuk a cukrot és a kakaóport, alaposan elkeverjük. Majd felöntjük a tejjel és folyamatos kevergetés mellett felfőzzük.</li>
                     <li>Amint felforrt, levesszük a tűzről, majd belekeverjük a darált kekszet és a rumaromát. Alaposan összedolgozzuk, picit lehűtjük. Az így kapott csokis masszát belenyomkodjuk egy sütőpapírral bélelt tepsibe vagy jénai tálba.</li>
                     <li>A tetejére elkészítjük a csokimázat, amelyhez szintén egy vastag aljú edénybe tesszük a cukrot, a kakaót és a vizet. Főzni kezdjük, addig kevergetjük a tűz felett, amíg be nem sűrűsödik. Ekkor egyenletesen a kakaós, kekszes süteményre öntjük, és hagyjuk megdermedni.</li>
-                </ol>
-
-                <ul>
-                    <li>A tiramisu elkészítéséhez a mascarponét egy nagy keverőtálba tesszük, hozzáadjuk a porcukrot és a tojások sárgáját. A fehérjéket robotgéppel kemény habbá verjük, és laza mozdulatokkal a mascarponéhez keverjük.</li>
-                    <li>Egy mélytányérba töltjük a kávét, és belekeverjük az alkoholt, majd a babapiskótákat gyors mozdulatokkal megforgatjuk benne, vigyázva, hogy ne ázzanak el.</li>
-                    <li>Egy kb. 6 cm falmagasságú tálban szorosan egymás mellé tesszük a megmártott piskóták felét. Rákenjük a krém felét, majd beterítjük egy újabb réteg kávéba áztatott babapiskótával, és rátesszük a maradék krémet.</li>
-                    <li>Egy éjszakára a hűtőszekrénybe tesszük, hogy összeérjenek az ízek. Tálalás előtt megszórjuk kakaóporral.</li>
-                </ul>   
+                </ol> 
             </article>
         </section>
         <footer>
