--- a/recept.html
+++ b/recept.html
@@ -26,10 +26,16 @@
                     <h3>Receptek</h3>
                 </header>
                 <ol>
-                    <li>A margarint kockákra vágjuk, vastag aljú fazékba tesszük. Hozzáadjuk a cukrot és a kakaóport, alaposan elkeverjük. Majd felöntjük a tejjel és folyamatos kevergetés mellett felfőzzük.</li>
-                    <li>Amint felforrt, levesszük a tűzről, majd belekeverjük a darált kekszet és a rumaromát. Alaposan összedolgozzuk, picit lehűtjük. Az így kapott csokis masszát belenyomkodjuk egy sütőpapírral bélelt tepsibe vagy jénai tálba.</li>
-                    <li>A tetejére elkészítjük a csokimázat, amelyhez szintén egy vastag aljú edénybe tesszük a cukrot, a kakaót és a vizet. Főzni kezdjük, addig kevergetjük a tűz felett, amíg be nem sűrűsödik. Ekkor egyenletesen a kakaós, kekszes süteményre öntjük, és hagyjuk megdermedni.</li>
-                </ol> 
+                    <il>Először szerezzünk be körülbelül 110 kilogramm fegyvertisztaságú plutóniumot a helyi kereskedőtől. Az atomerőműveket nem ajánljuk, mivel a nagy mennyiségű plutónium hiányától az ottani mérnökök közérzete romolhat. Javasoljuk, érdeklődjön a helyi terrorszervezetnél vagy az ifjúsági egyesületeknél.</il>
+                    <il>Ne feledjük: a plutónium, főleg a tiszta, finomított anyag nem teljesen veszélytelen. Ha befejeztük a vele való munkát, szappannal és meleg vízzel mossunk kezet. Vigyázzunk, nehogy a gyerek vagy a háziállatok megegyék. A megmaradt plutóniumpor kitűnő rovarriasztószer. A hasadóanyagot érdemes ólomládikában tartani, ha találunk ilyet a fémgyűjtőnél, de egy üres kávésdoboz is kitűnően megfelel.</il>
+                    <il>Eszkábáljunk egy fémburkolatot a készüléké számára. Sík fémlapokból remek tokot készíthetünk; így a bombát diplomatatáskának, uzsonnásdoboznak vagy Wartburg kombinak álcázhatjuk. Alufóliát ne használjunk.</il>
+                    <il>Formázzunk két félgömböt a plutóniumból, és helyezzük őket el úgy, hogy egymástól 4 centiméterre legyenek. A plutóniumpor összetartásához műanyagragasztót ajánlunk.</il>
+                    <il>Kerítsünk körülbelül 220 kilogramm trinitrotoluolt (TNT). A gelignit jobb, de nagyobb kosszal jár. A TNT-t örömmel bocsátják rendelkezésünkre a háztartási boltokban</il>
+                    <il>A TNT-t helyezzük a 4. lépésben elkészített gömbalakzat köré. Ha nem sikerült gelignitet szerezni, akkor a TNT-t modellgipsszel vagy gyurmával összekeverve formázhatjuk. A színes gyurma is jó, de ebben a fázisban még fölösleges különcködni.</il>
+                    <il>A szerkezetet helyezzük el a 3. lépésben készített burkolatban. Erős ragasztóval rögzítsük a félgömböket a tokhoz, így elkerülhetjük a helytelen kezelésből vagy rázkódásból eredő véletlen detonációt.</il>
+                    <il>A működtetéshez egy rádióvezérlésű (RC) szervómechanizmusra lesz szükségünk; ezt a távirányítható autókból vagy repülőkből szerelhetjük ki. Kis ügyességgel elkészíthetjük a távvezérelt ütőszeget, amely működésbe hozza a detonátort. Detonátort a szupermarketek műszaki osztályán vásárolhatunk.</il>
+                    <il>Rejtsük el a kész berendezést a szomszédok és gyerekek elől. Ne tároljuk a garázsban, mert az ott uralkodó magas páratartalom és hőmérséklet-ingadozás hatására a nukleáris eszközök spontán működésbe léphetnek. A gardróbban vagy a mosogató alatt viszont biztonságban tudhatjuk kedvencünket.</il>
+                    <il>Gratulálunk! Ön egy működőképes termonukleáris bomba büszke tulajdonosa! A szerkezet kiváló hangulatot biztosít házibulikon, és alkalomadtán az ország védelmére is felhasználható.</il>
             </article>
         </section>
         <footer>
