--- a/recept.html
+++ b/recept.html
@@ -17,13 +17,13 @@
         </ul>
         <header id="fejlec">
             <h1 id="szlogen">
-                A sportszelet receptje
+                Termonukleáris Atombomba receptje
             </h1> 
         </header>
             <article id="lenyeg">
                 <header>
                     <h2>Papp Dániel Dominik</h2>
-                    <h3>Receptek</h3>
+                    <h3>Recept</h3>
                 </header>
                 <ol>
                     <il>Először szerezzünk be körülbelül 110 kilogramm fegyvertisztaságú plutóniumot a helyi kereskedőtől. Az atomerőműveket nem ajánljuk, mivel a nagy mennyiségű plutónium hiányától az ottani mérnökök közérzete romolhat. Javasoljuk, érdeklődjön a helyi terrorszervezetnél vagy az ifjúsági egyesületeknél.</il>
